# jfasch-home-pages

docs/: .buildinfo  CNAME  STACKS.html  TODO.html  blog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
docs/.doctrees/: environment.pickle  index.doctree
docs/_downloads/1075524feca1afbe68c8d75ce9ad3c6b/: CMakeLists.txt
docs/_images/: graphviz-10732c08488757f53c9c749672009d5b0a5ef430.png.map
docs/_sources/: TODO.rst.txt
docs/_static/: alabaster.css  basic.css
docs/about/: contact.html  cv-de.html  index.html  lengthy.html  projects-de.html  skills-de.html
docs/blog/: 2010-07-30--beagleboard-how-to-repair-nand-also-known-as-40w.html  2010.html  2011-01-07--porting-to-linux-there-s-always-a-better-way.html  2011-01-11--saving-solid-state-disk-life--gentoo.html  2011.html  2012-04-03--Why-ps-sucks.html  2012.html  2020-02-27--fedora-kernel-build.html  2020-03-02--sphinx-gh-pages.html  2020-03-03--custom-domain-gh-pages.html  2020-03-22--ms-teams-on-linux.html  2020-04-19--bbb.html  2020-09-07--traunstein.html  2020.html  2021-08-26--grintovec.html  2021-09-12--xps13-shim-mok-brick.html  2021.html  2022-09-23--cross-raspi.html  2022.html  2025-07-29--Whats-wrong-with-chroot.html  archive.html  atom.xml  author.html  category.html  drafts.html  index.html  language.html  location.html  postlist.html
docs/courses/: booking.html  index.html  overview.html
docs/html/: .buildinfo  blog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/training-material/: index.html  ipc-screenplay.html  (+4 more)
(+5222 files in other folders)
